--- a/templates/login.html
+++ b/templates/login.html
@@ -6,17 +6,17 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}" />
-    <title>NUH - Add Patient</title>
+    <title>NM - Login</title>
 </head>
-      
+
 <!-- DEFAULT NAV -->
 <nav>
     <ul>
-        <li><a href="/patientportal">Patient Portal</a></li>
+        <li><a href="/login">Login</a></li>
         <li><a href="/">Home</a></li>
     </ul>
 </nav>
- 
+
 <body>
 
     <!-- ********** Block for container ********** -->
@@ -24,53 +24,38 @@
     
         <!-- Block for form input-->
         <div class="card-body">
-            <h2 class="card-title">Enter Patient Name</h2>
+            <h2 class="card-title">Enter Login Information</h2>
     
-            <form action="/add" method="POST">
+            <form action="/login" method="POST">
                 <div class="form-group">
-                    <label id="FirstName">First Name</label>
-                    <input type="text" name="FirstName" required class="form-control">
+                    <label id="EmailAddress">Email Address</label>
+                    <input type="text" name="EmailAddress" required class="form-control">
                 </div>
                 <div class="form-group">
-                    <label id="LastName">Last Name</label>
-                    <input type="text" name="LastName" required class="form-control">
+                    <label id="Password">Password</label>
+                    <input type="password" name="Password" required class="form-control">
                 </div>
     
-                <input type="button" name="btn" value="Add" id="submitBtn" data-toggle="modal" data-target="#confirm-submit" class="btn btn-default" />
-    
-                <!-- Modal confirmation block -->
-                <div class="modal fade" id="confirm-submit" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">Confirm Add</div>
-                            <div class="modal-body">Are you sure you want to enter patient?</div>
-                            <div class="modal-footer">
-                                <button id="submit" type="submit" class="btn btn-primary">Confirm</button>
-                                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- End block modal confirmation -->
-
-                <a class="btn btn-success" href="/patientportal" role="button">Go Back</a>
+                <button type="submit" class="btn btn-primary">Login</button>
+                <a class="btn btn-success" href="/create_account" role="button">Create Account</a>            
+                <br><br>
+                <label id="Error"> {{ error }} </label>
+            
             </form>
         </div>
         <!-- End block form input -->
     
         <!-- Block for Table Input::: Pulls returned results from app.py after execiting SQL Query for add: -->
         <div class="card-body">
-            <h2 class="card-title">History</h2>
+            <h2 class="card-title">Welcome!</h2>
             <table class="table table-dark">
                 <tr>
-                    <th scope="col"> PID</th>
-                    <th scope="col"> First Name</th>
+                    <th scope="col"> First name</th>
                     <th scope="col"> Last Name</th>
                 </tr>
                 <tbody>
-                {% for pid, first_name, last_name in result %}
+                {% for first_name, last_name in result %}
                     <tr>
-                        <td> {{ pid }} </td>
                         <td> {{ first_name }} </td>
                         <td> {{ last_name }} </td>
                     </tr>
@@ -78,11 +63,9 @@
                 </tbody>
             </table>
         </div>
+        <!-- ********** End Container Block ********** -->
 
-    </div>
-    <!-- ********** End Container Block ********** -->
-
-    <!-- Modal Scripts -->
+    <!-- Modal scripts -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
             integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
             crossorigin="anonymous"></script>
@@ -92,7 +75,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
             integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
             crossorigin="anonymous"></script>
-
 </body>
 
 </html>
