--- a/templates/create_account.html
+++ b/templates/create_account.html
@@ -55,7 +55,22 @@
                     <label id="Age">Age</label>
                     <input type="text" name="Age" required class="form-control">
                 </div>
-    
+
+                <h3 class="card-title">Billing Address and Home Address (Temp)</h3>
+
+                <div class="form-group">
+                    <label id="ZipCode">Zip Code</label>
+                    <input type="text" name="ZipCode" required class="form-control">
+                </div>
+                <div class="form-group">
+                    <label id="StreetNumber">Street Number</label>
+                    <input type="text" name="StreetNumber" required class="form-control">
+                </div>
+                <div class="form-group">
+                    <label id="StreetName">Street Name</label>
+                    <input type="text" name="StreetName" required class="form-control">
+                </div>
+     
                 <button type="submit" class="btn btn-primary">Create Account</button>
                 <a class="btn btn-success" href="/login" role="button">Login</a>            
                 <br><br>
