--- a/templates/index.html
+++ b/templates/index.html
@@ -1,67 +1,67 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-          <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}" />
-          <title>NM - Home</title>
 
-</head>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+              integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link rel="shortcut icon" href="/favicon.ico">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.5.3/css/bootstrap.min.css" integrity="sha512-oc9+XSs1H243/FRN9Rw62Fn8EtxjEYWHXRvjS43YtueEewbS6ObfXcJNyohjHqVKFPoXXUxwc+q1K7Dee6vv9g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <title>NM - Home</title>
+    </head>
 
-<!-- DEFAULT NAV -->
-<nav>
-    <ul>
-        <li><a href="/login">Login</a></li>
-        <li><a href="/">Home</a></li>
-    </ul>
-</nav>
+	<body>
 
-<body>
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		  <a class="navbar-brand" href="#">{{config['SITE_TITLE']}}</a>
+		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		    <span class="navbar-toggler-icon"></span>
+		  </button>
 
-    <!-- Default intro banner -->
-    <div class="banner">
-        <h1>Nittany Market Hompage</h1>
-    </div>
+		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+		    <ul class="navbar-nav mr-auto">
+		      
+             {% for item in navbar %}
+				{% if item.sublinks %}
+			      <li class="nav-item dropdown">
+			        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			          {{item.text}}
+			        </a>
 
-    <!-- Simple introduction -->
-    <div class="information">
-        <h3>Welcome to the Nittany Market homepage.</h3> 
-        <p>Please login or create an account.</p>  
-    </div>
+			        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 
+						{% for sublink in item.sublinks %}
+					          <a class='dropdown-item' href="{{sublink.url}}">{{sublink.text}}</a>
+					    {% endfor %}
+			        </div>
+			      </li>
 
-    <div class="card-body">
-        <h2 class="card-title">Users demo:</h2>
-        <table class="table table-dark">
-            <tr>
-                <th scope="col">Email</th>
-                <th scope="col">Password</th>
-            </tr>
-            <tbody>
-            {% for email, password in result %}
-                <tr>
-                    <td> {{ email }} </td>
-                    <td> {{ password }} </td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
-    </div>
+			  {% elif item.url %}
+			      <li class="nav-item">
+			        <a class="nav-link" href="{{item.url}}">{{item.text}}</a>
+			      </li>
+		      {% endif %}
+		      {% endfor %}
+		      </ul>
 
+		  </div>
+		</nav>
 
+        <!-- Default intro banner -->
+        <div class="banner">
+            <h1>Nittany Market Hompage</h1>
+        </div>
 
-    <!-- Modal scripts -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-            crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-            crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-            crossorigin="anonymous"></script>
-</body>
+        <!-- Simple introduction -->
+        <div class="information">
+            <h3>Welcome to the Nittany Market homepage.</h3> 
+            <p>Please login or create an account.</p>  
+        </div>
 
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.5.3/js/bootstrap.bundle.min.js" integrity="sha512-iceXjjbmB2rwoX93Ka6HAHP+B76IY1z0o3h+N1PeDtRSsyeetU3/0QKJqGyPJcX63zysNehggFwMC/bi7dvMig==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    </body>
 </html>
