--- a/templates/password.html
+++ b/templates/password.html
@@ -54,21 +54,25 @@
     
             <!-- Block for form input-->
             <div class="card-body">
-                <h2 class="card-title">Enter Login Information</h2>
+                <h2 class="card-title">Reset Password</h2>
                 
-                <form action="/login" method="POST">
+                <form action="/password" method="POST">
                     <div class="form-group">
                         <label id="EmailAddress">Email Address</label>
                         <input type="text" name="EmailAddress" required class="form-control">
                     </div>
                     <div class="form-group">
-                        <label id="Password">Password</label>
+                        <label id="Password">New Password</label>
                         <input type="password" name="Password" required class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label id="Password2">Old Password</label>
+                        <input type="password" name="PasswordOld" required class="form-control">
                     </div>
     
                     <button type="submit" class="btn btn-primary">Login</button>
-                    <a class="btn btn-success" href="/create_account" role="button">Create Account</a>
-                    <a class="btn btn-success" href="/password" role="button">Reset Password</a>                        
+                    <a class="btn btn-success" href="/login" role="button">Login</a> 
+                    <a class="btn btn-success" href="/create_account" role="button">Create Account</a>                       
                     <br><br>
                     <label id="Error"> {{ error }} </label>
             
