--- a/templates/password.html
+++ b/templates/password.html
@@ -9,7 +9,7 @@
         <link rel="shortcut icon" href="/favicon.ico">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.5.3/css/bootstrap.min.css" integrity="sha512-oc9+XSs1H243/FRN9Rw62Fn8EtxjEYWHXRvjS43YtueEewbS6ObfXcJNyohjHqVKFPoXXUxwc+q1K7Dee6vv9g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <title>NM - Login</title>
+        <title>NM - Reset Password</title>
     </head>
 
     <body>
@@ -66,11 +66,11 @@
                         <input type="password" name="Password" required class="form-control">
                     </div>
                     <div class="form-group">
-                        <label id="Password2">Old Password</label>
+                        <label id="PasswordOld">Old Password</label>
                         <input type="password" name="PasswordOld" required class="form-control">
                     </div>
     
-                    <button type="submit" class="btn btn-primary">Login</button>
+                    <button type="submit" class="btn btn-primary">Reset Password</button>
                     <a class="btn btn-success" href="/login" role="button">Login</a> 
                     <a class="btn btn-success" href="/create_account" role="button">Create Account</a>                       
                     <br><br>
