--- a/templates/rateseller.html
+++ b/templates/rateseller.html
@@ -9,7 +9,7 @@
         <link rel="shortcut icon" href="/favicon.ico">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.5.3/css/bootstrap.min.css" integrity="sha512-oc9+XSs1H243/FRN9Rw62Fn8EtxjEYWHXRvjS43YtueEewbS6ObfXcJNyohjHqVKFPoXXUxwc+q1K7Dee6vv9g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <title>NM - Home</title>
+        <title>NM - Review Product</title>
     </head>
 
 	<body>
@@ -50,27 +50,47 @@
 		  <li>Search</li>
 		</nav>
 
-        <!-- Default intro banner -->
-        <div class="banner">
-            <h1>Nittany Market</h1>
+        <!-- ********** Block for container ********** -->
+        <div class="container-sm">
+            <!-- Block for form input-->
+            <div class="card-body">
+                <h2 class="card-title">Enter Product Information</h2>
+
+                    <form action="/publishproduct" method="POST">
+
+                        <div class="form-group">
+                          <label id="ProductDescription">Product Quanity</label>
+                          <select id="ProductQuanity" class="form-control">
+                              <option value="1">1</option>
+                              <option value="2">2</option>
+                              <option value="3">3</option>
+                              <option value="4">4</option>
+                              <option value="5">5</option>
+                          </select>
+                        </div>
+
+                        <div class="form-group">
+                            <label id="ProductDescription">Product Description</label>
+                            <textarea name="ProductDescription" required class="form-control"></textarea>
+                        </div>
+                        
+                        <div class="form-group">
+                            <label id="ProductDescription">Product Category</label>
+                            <select id="ProductCategory"  class="form-control">
+                                {% for category in categories %}
+                                    <option value={{category[0]}}>{{category[0]}}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                        
+                        <br><br>
+                        <button type="submit" class="btn btn-primary">Create Listing</button>                    
+                        <label id="Error"> {{ error }} </label>
+                    
+                    </form>
+                </div>
+                <!-- End block form input -->
         </div>
-
-        <!-- Product Grid -->
-		<div class="products-grid">
-			{% for product in products %}
-			<form action="/product" method="POST" class="product">
-				<input type="hidden" name="SellerEmail-1" value="{{ product[0] }}">
-				<input type="hidden" name="ListingID" value="{{ product[1] }}">
-				<button type="submit">
-					<p class="line">{{ product[4] }}</p>
-					<p class="line">Description: {{ product[5] }}</p>
-					<p class="line">Price: {{ product[6] }}</p>
-				</button>
-			</form>
-			{% endfor %}
-		</div>
-
-
         
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.5.3/js/bootstrap.bundle.min.js" integrity="sha512-iceXjjbmB2rwoX93Ka6HAHP+B76IY1z0o3h+N1PeDtRSsyeetU3/0QKJqGyPJcX63zysNehggFwMC/bi7dvMig==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
