--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,8 @@
 		      </ul>
 
 		  </div>
-		  <li>Search</li>
+		  
+		  <input type="text" name="search" value="Search">
 		</nav>
 
         <!-- Default intro banner -->
