--- a/templates/reviewproduct.html
+++ b/templates/reviewproduct.html
@@ -56,7 +56,7 @@
             <div class="card-body">
                 <h2 class="card-title">Enter Product Information</h2>
 
-                    <form action="/publishproduct" method="POST">
+                    <form action="/reviewproducthandle" method="POST">
                         <input type="hidden" name="TransactionID" value="{{ transaction_id }}">
                         <div class="form-group">
                             <label id="ProductReview">Product Review</label>
