--- a/templates/cart.html
+++ b/templates/cart.html
@@ -60,8 +60,8 @@
 			<div class="cart-items">
 
 				<div class="cart-about">
-					<h1 class="cart-title">title when join works</h1>
-					<h3 class="cart-subtitle">desc when join works</h3>
+					<h1 class="cart-title">{{ item[13] }}</h1>
+					<h3 class="cart-subtitle">{{ item[14] }}</h3>
 				</div>
 
 				<div class="cart-counter">
