--- a/templates/listings.html
+++ b/templates/listings.html
@@ -50,55 +50,39 @@
 		  <li>Search</li>
 		</nav>
 
-        <!-- ********** Block for container ********** -->
-        <div class="container-sm">
-            <!-- Block for form input-->
-            <div class="card-body">
-                <h2 class="card-title">Enter Product Information</h2>
-                    <form action="/publishproduct" method="POST">
-                        <div class="form-group">
-                            <label id="ProductTitle">Product Title</label>
-                            <input type="text" name="ProductTitle" required class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <label id="ProductName">Product Name</label>
-                            <input type="text" name="ProductName" required class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <label id="ProductDescription">Product Description</label>
-                            <textarea name="ProductDescription" required class="form-control"></textarea>
-                        </div>
-                        <div class="form-group">
-                            <label id="ProductPrice">Product Price</label>
-                            <input type="number" name="ProductPrice" min="0.01" step=".01" max="5000" value="0.00" required class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <label id="ProductDescription">Product Quanity</label>
-                            <select id="Quanity" class="form-control">
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                                <option value="5">5</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label id="ProductDescription">Product Category</label>
-                            <select id="Category"  class="form-control">
-                                {% for category in categories %}
-                                    <option value={{category[0]}}>{{category[0]}}</option>
-                                {% endfor %}
-                            </select>
-                        </div>
-                        
-                        <br><br>
-                        <button type="submit" class="btn btn-primary">Create Listing</button>                    
-                        <label id="Error"> {{ error }} </label>
-                    
-                    </form>
-                </div>
-                <!-- End block form input -->
-        </div>
+		<div class="cart-container">
+			<div class="cart-header">
+				<h3 class="cart-heading">Recent Orders</h3>
+			</div>
+  
+			{% for item in orders %}
+			<div class="cart-items">
+
+				<div class="cart-about">
+					{% set title = item[13] %}
+					<h1 class="cart-title">{{ title[0:12] }}..</h1>
+					<h3 class="cart-subtitle">{{ item[14] }}</h3>
+				</div>
+
+				<div class="cart-counter">
+					<div class="cart-count">Item Quanity: {{ item[5] }}</div>
+				</div>
+
+				<div class="cart-prices">
+					<div class="cart-amount">Item Total: {{ item[6] }}</div>
+					<form action="/reviewproduct" method="POST">						
+						<input type="hidden" name="TransactionID" value="{{ item[0] }}">
+						<button type="submit" href="/reviewproduct" class="cart-remove" style="border: 0px !important;"><u>Review Product</u></button>
+					</form>
+					<form action="/rateseller" method="POST">						
+						<input type="hidden" name="TransactionID" value="{{ item[0] }}">
+						<button type="submit" href="/rateseller" class="cart-remove" style="border: 0px !important;"><u>Rate Seller</u></button>
+					</form>		
+				  </div>
+			</div>
+			{% endfor %}
+
+		<hr> 
         
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.5.3/js/bootstrap.bundle.min.js" integrity="sha512-iceXjjbmB2rwoX93Ka6HAHP+B76IY1z0o3h+N1PeDtRSsyeetU3/0QKJqGyPJcX63zysNehggFwMC/bi7dvMig==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
