--- a/templates/orders.html
+++ b/templates/orders.html
@@ -59,8 +59,9 @@
 			<div class="cart-items">
 
 				<div class="cart-about">
-					<h1 class="cart-title">title when join works</h1>
-					<h3 class="cart-subtitle">desc when join works</h3>
+					{% set title = item[13] %}
+					<h1 class="cart-title">{{ title[0:12] }}..</h1>
+					<h3 class="cart-subtitle">{{ item[14] }}</h3>
 				</div>
 
 				<div class="cart-counter">
