--- a/templates/publishproduct.html
+++ b/templates/publishproduct.html
@@ -73,8 +73,8 @@
                             <input type="number" name="ProductPrice" min="0.01" step=".01" max="5000" value="0.00" required class="form-control">
                         </div>
                         <div class="form-group">
-                            <label id="ProductDescription">Product Quanity</label>
-                            <select id="ProductQuanity" class="form-control">
+                            <label id="productdesc">Product Quanity</label>
+                            <select name="ProductQuanity" class="form-control">
                                 <option value="1">1</option>
                                 <option value="2">2</option>
                                 <option value="3">3</option>
@@ -83,8 +83,8 @@
                             </select>
                         </div>
                         <div class="form-group">
-                            <label id="ProductDescription">Product Category</label>
-                            <select id="ProductCategory"  class="form-control">
+                            <label id="product-cat">Product Category</label>
+                            <select name="ProductCategory"  class="form-control">
                                 {% for category in categories %}
                                     <option value={{category[0]}}>{{category[0]}}</option>
                                 {% endfor %}
