--- a/templates/rateseller.html
+++ b/templates/rateseller.html
@@ -54,13 +54,13 @@
         <div class="container-sm">
             <!-- Block for form input-->
             <div class="card-body">
-                <h2 class="card-title">Enter Product Information</h2>
+                <h2 class="card-title">Enter Seller Rating</h2>
 
-                    <form action="/publishproduct" method="POST">
-
+                    <form action="/ratesellerhandle" method="POST">
+                      <input type="hidden" name="TransactionID" value="{{ transaction_id }}">
                         <div class="form-group">
-                          <label id="ProductDescription">Product Quanity</label>
-                          <select id="ProductQuanity" class="form-control">
+                          <label id="rating">Seller Rating</label>
+                          <select name="SellerRating" class="form-control">
                               <option value="1">1</option>
                               <option value="2">2</option>
                               <option value="3">3</option>
@@ -68,23 +68,9 @@
                               <option value="5">5</option>
                           </select>
                         </div>
-
-                        <div class="form-group">
-                            <label id="ProductDescription">Product Description</label>
-                            <textarea name="ProductDescription" required class="form-control"></textarea>
-                        </div>
-                        
-                        <div class="form-group">
-                            <label id="ProductDescription">Product Category</label>
-                            <select id="ProductCategory"  class="form-control">
-                                {% for category in categories %}
-                                    <option value={{category[0]}}>{{category[0]}}</option>
-                                {% endfor %}
-                            </select>
-                        </div>
                         
                         <br><br>
-                        <button type="submit" class="btn btn-primary">Create Listing</button>                    
+                        <button type="submit" class="btn btn-primary">Submit Rating</button>                    
                         <label id="Error"> {{ error }} </label>
                     
                     </form>
