--- a/templates/orders.html
+++ b/templates/orders.html
@@ -9,7 +9,7 @@
         <link rel="shortcut icon" href="/favicon.ico">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.5.3/css/bootstrap.min.css" integrity="sha512-oc9+XSs1H243/FRN9Rw62Fn8EtxjEYWHXRvjS43YtueEewbS6ObfXcJNyohjHqVKFPoXXUxwc+q1K7Dee6vv9g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <title>NM - Cart</title>
+        <title>NM - Orders</title>
     </head>
 
 	<body class="cartbody">
@@ -55,7 +55,7 @@
 				<h3 class="cart-heading">Recent Orders</h3>
 			</div>
   
-			{% for item in orders %}
+			{% for item in reviews %}
 			<div class="cart-items">
 
 				<div class="cart-about">
