--- a/templates/rateseller.html
+++ b/templates/rateseller.html
@@ -14,41 +14,52 @@
 
 	<body>
 
+		<!-- Main Nav Bar Links Region -->
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		  <a class="navbar-brand" href="#">{{config['SITE_TITLE']}}</a>
-		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-		    <span class="navbar-toggler-icon"></span>
-		  </button>
+			<a class="navbar-brand" href="#">{{config['SITE_TITLE']}}</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		    	<span class="navbar-toggler-icon"></span>
+		  	</button>
 
-		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-		    <ul class="navbar-nav mr-auto">
-		      
-             {% for item in navbar %}
+		  	<div class="collapse navbar-collapse" id="navbarSupportedContent">
+		    	<ul class="navbar-nav mr-auto">
+				
+				<!-- If nav dict has item sublink create menu obj otherwise create obj with url for link -->
+             	{% for item in navbar %}
 				{% if item.sublinks %}
-			      <li class="nav-item dropdown">
-			        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-			          {{item.text}}
-			        </a>
+			      	<li class="nav-item dropdown">
+			        	<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				          	{{item.text}}
+			        	</a>
 
-			        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-
+			        	<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 						{% for sublink in item.sublinks %}
 					          <a class='dropdown-item' href="{{sublink.url}}">{{sublink.text}}</a>
 					    {% endfor %}
-			        </div>
-			      </li>
+			        	</div>
+			      	</li>
 
-			  {% elif item.url %}
-			      <li class="nav-item">
-			        <a class="nav-link" href="{{item.url}}">{{item.text}}</a>
-			      </li>
-		      {% endif %}
-		      {% endfor %}
-		      </ul>
+			  		{% elif item.url %}
+			      	<li class="nav-item">
+			        	<a class="nav-link" href="{{item.url}}">{{item.text}}</a>
+			      	</li>
+		      		{% endif %}
+		      		{% endfor %}
 
-		  </div>
-		  <li>Search</li>
+		      	</ul>
+		  	</div>
+			
+			<!-- Search Bar Form -->
+		  	<form action="/search" method="POST">
+				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+					<path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+				  </svg>						
+				<input type="text" name="search">
+				<button type="submit" class="btn btn-primary" style="background-color: orangered;">Search</button>
+			</form>
 		</nav>
+
+		<div style="margin: 0px; padding: 0px; background-color: black; color: black; height: 2px !important; width: 100% important;"></div>
 
         <!-- ********** Block for container ********** -->
         <div class="container-sm">
