--- a/templates/orders.html
+++ b/templates/orders.html
@@ -66,7 +66,7 @@
 				<h3 class="cart-heading">Recent Orders</h3>
 			</div>
   
-			{% for item in reviews %}
+			{% for item in orders %}
 			<div class="cart-items">
 
 				<div class="cart-about">
