--- a/templates/publishproduct.html
+++ b/templates/publishproduct.html
@@ -81,7 +81,7 @@
                         </div>
                         <div class="form-group">
                             <label id="ProductPrice">Product Price</label>
-                            <input type="number" name="ProductPrice" min="0.01" step=".01" max="5000" value="0.00" required class="form-control">
+                            <input type="number" name="ProductPrice" min="1" step="1" max="5000" value="$1" required class="form-control">
                         </div>
                         <div class="form-group">
                             <label id="productdesc">Product Quanity</label>
@@ -97,7 +97,7 @@
                             <label id="product-cat">Product Category</label>
                             <select name="ProductCategory"  class="form-control">
                                 {% for category in categories %}
-                                    <option value={{category[0]}}>{{category[0]}}</option>
+                                    <option value="{{category[0]}}">{{category[0]}}</option>
                                 {% endfor %}
                             </select>
                         </div>
